--- a/expath-pkg.xml.tmpl
+++ b/expath-pkg.xml.tmpl
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package xmlns="http://expath.org/ns/pkg" name="http://exist-db.org/apps/shared" abbrev="shared" version="0.3.0" spec="1.0">
+<package xmlns="http://expath.org/ns/pkg" name="http://exist-db.org/apps/shared" abbrev="shared" version="@project.version@" spec="1.0">
     <title>Shared Resources: jquery, dojo, ace ...</title>
+    <!-- fixme! This test needs to change.  -->
     <dependency processor="eXist-db" version="trunk &gt; rev 18070"/>
     <xquery>
         <namespace>http://exist-db.org/xquery/apps</namespace>
