Small styling fixes.

--- a/resources/css/content.less
+++ b/resources/css/content.less
@@ -2,7 +2,7 @@
 
 /* ------------------------------------ Documentation styles ---------------------------------- */
 
-#content .content, #content .content p, #content .content li, #content .content dt {
+.content {
     font: 16px/24px @contentFont;
     color: #555;
 }
