Add bootstrap 3.0.3; update eXist default stylesheets to support bootstrap 3

--- a/resources/css/content.less
+++ b/resources/css/content.less
@@ -105,7 +105,11 @@
 
 .content img {
     margin: 8px auto;
-    max-width: 100%
+    max-width: 100%;
+}
+
+.content td img {
+    max-width: inherit;
 }
 
 .content figure {
