--- a/resources/css/exist-2.2.css
+++ b/resources/css/exist-2.2.css
@@ -1,10 +1,10 @@
-@import url('/exist/apps/shared-resources/resources/css/bootstrap-3.0.3.min.css');
+@import url('bootstrap-3.0.3.min.css');
 @charset "utf-8";
 /* ---------------------------------------- FONTS ---------------------------------------- */
 @font-face {
   font-family: 'QuicksandBook';
-  src: url('http://localhost:8080/exist/apps/shared-resources/resources/css/Quicksand_Book-webfont.eot');
-  src: url('http://localhost:8080/exist/apps/shared-resources/resources/css/Quicksand_Book-webfont.eot?#iefix') format('embedded-opentype'), url('http://localhost:8080/exist/apps/shared-resources/resources/css/Quicksand_Book-webfont.woff') format('woff'), url('http://localhost:8080/exist/apps/shared-resources/resources/css/Quicksand_Book-webfont.ttf') format('truetype'), url('http://localhost:8080/exist/apps/shared-resources/resources/css/Quicksand_Book-webfont.svg#QuicksandBook') format('svg');
+  src: url('Quicksand_Book-webfont.eot');
+  src: url('Quicksand_Book-webfont.eot?#iefix') format('embedded-opentype'), url('Quicksand_Book-webfont.woff') format('woff'), url('Quicksand_Book-webfont.ttf') format('truetype'), url('Quicksand_Book-webfont.svg#QuicksandBook') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -53,8 +53,6 @@
   background-color: transparent;
   border: 0;
   color: inherit;
-  word-break: break-all;
-  word-wrap: break-word;
 }
 .content .option {
   font-weight: bold;
@@ -155,14 +153,14 @@
 /* ---------------------------------------- LAYOUT ---------------------------------------- */
 body {
   color: #222;
-  background: url(/exist/apps/shared-resources/resources/css/../images/body.gif) repeat 50% 100%;
+  background: url(../images/body.gif) repeat 50% 100%;
 }
 #grey-top {
-  background: #f3f3f3 url(/exist/apps/shared-resources/resources/css/../images/horizontal.gif) repeat-x 50% 0;
+  background: #f3f3f3 url(../images/horizontal.gif) repeat-x 50% 0;
   height: 100%;
 }
 .grey-bot {
-  background: url(/exist/apps/shared-resources/resources/css/../images/body-base.gif) repeat-x 50% 100%;
+  background: url(../images/body-base.gif) repeat-x 50% 100%;
   padding-bottom: 2em;
 }
 #container {
@@ -170,13 +168,13 @@ body {
 }
 @media (min-width: 767px) {
   #header {
-    background: #f3f3f3 url(/exist/apps/shared-resources/resources/css/../images/header.gif) top right no-repeat;
+    background: #f3f3f3 url(../images/header.gif) top right no-repeat;
     height: 120px;
     width: 100%;
   }
 }
 #header a#logo {
-  background: url(/exist/apps/shared-resources/resources/css/../images/existdb.png) center left no-repeat;
+  background: url(../images/existdb.png) center left no-repeat;
   display: block;
   width: 220px;
   height: 100px;
@@ -188,7 +186,7 @@ body {
   min-height: 600px;
 }
 #sourceforge {
-  background: url(/exist/apps/shared-resources/resources/css/../images/sourceforge.gif) no-repeat 50%;
+  background: url(../images/sourceforge.gif) no-repeat 50%;
   width: 130px;
   height: 30px;
   display: block;
@@ -202,7 +200,7 @@ body {
   padding: 1em 1em;
   height: 50px;
   color: #222;
-  background: url(/exist/apps/shared-resources/resources/css/../images/body.gif) repeat 50% 100%;
+  background: url(../images/body.gif) repeat 50% 100%;
 }
 #footer ul {
   float: left;
@@ -287,10 +285,10 @@ body {
     height: 52px;
     min-width: 150px;
     vertical-align: middle;
-    background: url(/exist/apps/shared-resources/resources/css/../images/bgmenu.gif) no-repeat top center;
+    background: url(../images/bgmenu.gif) no-repeat top center;
   }
   .nav .open {
-    background: url(/exist/apps/shared-resources/resources/css/../images/bgmenuhi.gif) no-repeat top center;
+    background: url(../images/bgmenuhi.gif) no-repeat top center;
   }
   .dropdown-menu {
     background: #0083cb;
@@ -369,7 +367,7 @@ a:hover {
 }
 .code {
   font: 14px/20px "Ubuntu Mono", Menlo, Consolas, "Courier New", Courier, monospace;
-  background: #444444 url(/exist/apps/shared-resources/resources/css/../images/noise.png);
+  background: #444444 url(../images/noise.png);
   padding: 8.5px;
   width: 100%;
   margin: 18px 0 18px;
