--- a/resources/css/exist-2.2.less
+++ b/resources/css/exist-2.2.less
@@ -12,18 +12,9 @@ body { color: #222; background: url(../images/body.gif) repeat 50% 100%; }
 #container { margin: 0 auto 30px auto; }
 
 @media (min-width: 767px) {
-    #grey-top { background: @pageBackground url(../images/horizontal.gif) repeat-x 50% 0; height: 100%; }
+    #grey-top { background: @pageBackground url(../images/horizontal.gif) repeat-x 50% 0; height: 100%; position: relative;}
     #header { background: @pageBackground url(../images/header.gif) top right no-repeat; height: 120px; width: 100%; }
-    #header a#logo { 
-        background-image: url(../images/existdb.png);
-        background-repeat: no-repeat;
-        background-position: 50% 80%;
-        display: block; 
-        width: 220px; 
-        height: 100px; 
-        text-indent: -999em; 
-        outline: 0; 
-        margin: 0; }
+    #header a#logo { background: url(../images/existdb.png) center left no-repeat; display: block; width: 220px; height: 100px; text-indent: -999em; outline: 0; margin: 10px 0; }
 }
 
 @media (max-width: 767px) {
@@ -39,18 +30,30 @@ body { color: #222; background: url(../images/body.gif) repeat 50% 100%; }
 
 #sourceforge { background: url(../images/sourceforge.gif) no-repeat 50%; width: 130px; height: 30px; display: block; margin: 30px auto; text-indent: -999em; overflow: hidden; }
 
-#footer { clear: both; margin: 0 auto; padding: 1em 1em; height: 50px; color: #222; background: url(../images/body.gif) repeat 50% 100%; }
+#footer { clear: both; margin: 0 auto; height: 50px; color: #222; background: url(../images/body.gif) repeat 50% 100%; }
 #footer .container {
     padding-left: 0; padding-right: 0;
 }
-
-#footer ul { float: left; margin: 0 0 0 -4px; padding-left: 0;}
+#footer ul { float: left; margin: 0 0 0 -4px; padding: 1em 1em 1em 0; }
 #footer ul li { display: inline; }
 #footer ul li a { padding: 2px 4px; color: @orange; }
 #footer ul li a:hover { background: #333; }
 
-#copyright { float: right; width: 220px; text-align: right;}
+#copyright { float: right; width: 220px; text-align: right; padding-top: 1em;}
 #copyright p { padding: 0; color: #F3F3F3; }
+
+#poweredby {
+    position: absolute;
+    right: 5px;
+    bottom: 65px;
+    width: 120px;
+    height: 50px;
+    margin-left: 20px;
+    margin-top: -5px;
+    display: inline-block;
+    background: url(../images/powered-by.svg) no-repeat 50%;
+    background-size: 100% 100%;
+}
 
 /* ---------------------------------------- NAVBAR ---------------------------------------- */
 
@@ -111,10 +114,6 @@ body { color: #222; background: url(../images/body.gif) repeat 50% 100%; }
     #sidebar {
         display: none;
     }
-    
-    #footer .hidden-xs-inline {
-        display: none;
-    }
 }
 
 @media (min-width: 767px) {
@@ -158,15 +157,6 @@ body { color: #222; background: url(../images/body.gif) repeat 50% 100%; }
     .dropdown-menu>li>a:hover {
         background: #222;
         color: @orange;
-    }
-}
-
-@media (min-width: 767px) and (max-width: 998px) {
-    .nav>li {
-        min-width: 130px;
-    }
-    #header a#logo {
-        margin: 0;
     }
 }
 
